<resources>
    <string name="app_name">TMars Companion</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="resourceImageContentDescription">The resource image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="tableauTabTitle">Tableau</string>
    <string name="tagTabTitle">Tags</string>
    <string name="cardTabTitle">Play Card</string>
    <string name="helpTabTitle">Help</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_open">TMars Companion</string>
    <string name="title_activity_setup">New Game</string>
    <string name="title_activity_tableau">Terraforming</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>
    <string name="userImageContentDescription">user</string>

    <string name="action_text">
        Take turns* doing one or two of the following:\n
        - Play a card\n
        - Use a standard project\n
        - Use a blue card action\n
        - Spend 8 plants to place a greenery tile\n
        - Spend 8 heat to raise the temperature\n
        - Claim a milestone\n
        - Fund an award
    </string>
    <string name="tile_text">
        Ocean:\n
        \t\t\tPlace only on the reserved areas.\n
        \t\t\tReceive 1 Terraformer Rating.\n
        Greenery:\n
        \t\t\tPlace adjacent to a tile you own, if possible.\n
        \t\t\t\t\t\tYou do not own ocean tiles.\n
        \t\t\tIncrease oxygen 1 step.\n
        \t\t\t\t\t\tGain 1 TR if oxygen was raised.\n
        \t\t\t\t\t\tDo not gain any TR if oxygen was already at max.\n
        City:\n
        \t\t\tMay not be placed next to another city tile.\n
        \t\t\tWorth 1 VP for every adjacent greenery at the end of the game.\n
        Special:\n
        \t\t\tFollow card instructions.
    </string>
    <string name="general_text">
        Increasing Oxygen, Temperature, and Ocean, also increases your TR.\n
        All cards have symbols that explain their function, and explanatory parenthetical text.\n
        If a card has an asterisk (*) it follows special rules listed on the card.\n
        A red border on a resource indicates that you may target any 1 player, including yourself.\n
        Production is marked by a resource icon in a brown box.
    </string>
    <string name="end_text">
        When Oxygen level is 14%, the temperature is at +8, and there are 9 ocean tiles in play, the game ends when the current generation has concluded.\n
        After the production phase is completed, players get an extra chance to, in turn order, spend plants to place greenery tiles, following the normal rules.
    </string>
    <string name="score_text">
        Your final score is the sum of the following:\n
        <u>Terraformer Rating:</u>\n
            Your TR as indicated by the TR track.\n
        <u>Awards:</u>\n
            Each funded award gives 5 VP to the winner of the category, and 2 VP to second place if there are at least 3 players.\n
            In a tie for first, both players score 5 VP, and no second place is awarded.\n
            In a tie for second, both players score 2 VP.\n
        <u>Milestones:</u>\n
            Score 5 VP for each milestone you claimed.\n
        <u>Map:</u>\n
            Score 1 VP for every greenery tile you own.\n
            Score 1 VP per adjacent greenery per city you own.\n
        <u>Cards:</u>\n
            Count up the VPs listed on all the cards you have played.
    </string>

    <string-array name="corporations_array">
        <item>Credicor</item>
        <item>Ecoline</item>
        <item>Helion</item>
        <item>Mining Guild</item>
        <item>Interplanetary Cinematics</item>
        <item>Inventrix</item>
        <item>Phobolog</item>
        <item>Tharsis Republic</item>
        <item>Thorgate</item>
        <item>UN Mars Initiative</item>
        <item>Teractor</item>
        <item>Saturn Systems</item>
    </string-array>
</resources>
